--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,7 +14,9 @@
     />
   </head>
   <body>
-    <div id="title"><h1>Etch-a-Sketch</h1></div>
-    <div id="container"></div>
+    <div id="main">
+      <div id="title"><h1>Etch-a-Sketch</h1></div>
+      <div id="container"></div>
+    </div>
   </body>
 </html>
