Added and styled buttons

--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
   <body>
     <div id="main">
       <div id="title"><h1>Etch-a-Sketch</h1></div>
-      <div id="container"></div>
+      <div id="content">
+        <div class="options">
+          <button>Canvas Size</button>
+          <button>Reset</button>
+        </div>
+        <div id="container"></div>
+      </div>
     </div>
   </body>
 </html>
