Added butto n functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="title"><h1>Etch-a-Sketch</h1></div>
       <div id="content">
         <div class="options">
-          <button>Canvas Size</button>
+          <button class="canvasBtn">Canvas Size</button>
           <button>Reset</button>
         </div>
         <div id="container"></div>
