Added reset button functionality

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div id="content">
         <div class="options">
           <button class="canvasBtn">Canvas Size</button>
-          <button>Reset</button>
+          <button class="removeBtn">Reset</button>
         </div>
         <div id="container"></div>
       </div>
